--- a/src/main/resources/com/jaeksoft/opensearchserver/server.yaml
+++ b/src/main/resources/com/jaeksoft/opensearchserver/server.yaml
@@ -12,6 +12,8 @@ services:
 - script
 - scheduler
 - renderer
+- graph
+- search
 
 #
 # The maximum number of threads used by the scheduler service
