Update default log level

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootLogger=WARN, stdout
 
 # Active debug for snapshot
-log4j.logger.com.opensearchserver=WARN
+log4j.logger.com.opensearchserver=INFO
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
