--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-catalina</artifactId>
 			<version>${tomcat.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.sourceforge.nekohtml</groupId>
@@ -724,7 +725,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>rpm-maven-plugin</artifactId>
-				<version>2.1.2</version>
+				<version>2.1.3</version>
 				<executions>
 					<execution>
 						<id>generate-rpm</id>
