--- a/pom.xml
+++ b/pom.xml
@@ -571,6 +571,7 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.1</version>
 				<executions>
 					<execution>
 						<id>tomcat-package</id>
