--- a/pom.xml
+++ b/pom.xml
@@ -869,7 +869,7 @@
 				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
-					<version>2.1</version>
+					<version>2.3-SNAPSHOT</version>
 					<dependencies>
 						<dependency>
 							<groupId>org.apache.tomcat.embed</groupId>
