--- a/pom.xml
+++ b/pom.xml
@@ -431,7 +431,7 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
-			<version>4.5.1.1</version>
+			<version>4.5.1-1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.opencsv</groupId>
