--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
 			<version>${httpclient.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz-commonj</artifactId>
 			<version>2.1.7</version>
