--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,16 @@
 			<version>${httpclient.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>${httpcore.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore-nio</artifactId>
+			<version>${httpcore.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox-ant</artifactId>
 			<version>1.8.10</version>
@@ -461,7 +471,7 @@
 		<dependency>
 			<groupId>org.roaringbitmap</groupId>
 			<artifactId>RoaringBitmap</artifactId>
-			<version>0.5.10</version>
+			<version>0.5.11</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -470,6 +480,7 @@
 		<cxf.version>2.7.18</cxf.version>
 		<lucene.version>3.6.2</lucene.version>
 		<httpclient.version>4.5.1</httpclient.version>
+		<httpcore.version>4.4.4</httpcore.version>
 		<poi.version>3.12</poi.version>
 		<selenium.version>2.48.2</selenium.version>
 		<zk.version>6.5.4</zk.version>
