--- a/pom.xml
+++ b/pom.xml
@@ -519,6 +519,11 @@
 			<version>3.8.11.2</version>
 		</dependency>
 		<dependency>
+			<groupId>args4j</groupId>
+			<artifactId>args4j</artifactId>
+			<version>2.33</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-logging-log4j</artifactId>
 			<version>${tomcat.version}</version>
