--- a/pom.xml
+++ b/pom.xml
@@ -519,9 +519,9 @@
 			<version>3.8.11.2</version>
 		</dependency>
 		<dependency>
-			<groupId>args4j</groupId>
-			<artifactId>args4j</artifactId>
-			<version>2.33</version>
+			<groupId>com.github.jankroken</groupId>
+			<artifactId>commandline</artifactId>
+			<version>1.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
