--- a/pom.xml
+++ b/pom.xml
@@ -658,6 +658,7 @@
 								<includes>
 									<include>org.apache.tomcat.embed:*</include>
 									<include>commons-io:commons-io</include>
+									<incudes>com.github.jankroken:commandline</incudes>
 								</includes>
 							</artifactSet>
 							<transformers>
