--- a/pom.xml
+++ b/pom.xml
@@ -486,6 +486,24 @@
             <groupId>com.jaeksoft</groupId>
             <artifactId>jcifs-krb5-jdk7</artifactId>
             <version>1.3.18</version>
+            <optional>true</optional>
+            <exclusions>
+                <exclusion>
+                    <groupId>jcifs</groupId>
+                    <artifactId>jcifs</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>jcifs</groupId>
+            <artifactId>jcifs</artifactId>
+            <version>1.3.17</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jaeksoft</groupId>
+            <artifactId>jcifs-krb5-jdk7</artifactId>
+            <version>1.3.18</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
