--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
-            <version>7.0.11</version>
+            <version>7.0.12</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>com.ibm.icu</groupId>
             <artifactId>icu4j</artifactId>
-            <version>56.1</version>
+            <version>57.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.api.client</groupId>
@@ -171,7 +171,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.8.0</version>
+            <version>2.8.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.james</groupId>
@@ -182,6 +182,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-email</artifactId>
             <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.htmlcleaner</groupId>
@@ -332,7 +337,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.18</version>
+            <version>1.7.21</version>
         </dependency>
         <dependency>
             <groupId>org.zkoss.zk</groupId>
@@ -402,6 +407,11 @@
             <version>${selenium.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>htmlunit-driver</artifactId>
+            <version>2.20</version>
+        </dependency>
+        <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>phantomjsdriver</artifactId>
             <version>1.2.1</version>
@@ -409,7 +419,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>1.10</version>
+            <version>1.11</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -445,7 +455,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.5.2-1</version>
+            <version>4.5.3</version>
         </dependency>
         <dependency>
             <groupId>net.sf.opencsv</groupId>
@@ -475,7 +485,7 @@
         <dependency>
             <groupId>org.roaringbitmap</groupId>
             <artifactId>RoaringBitmap</artifactId>
-            <version>0.6.5</version>
+            <version>0.6.14</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -498,12 +508,6 @@
             <groupId>jcifs</groupId>
             <artifactId>jcifs</artifactId>
             <version>1.3.17</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jaeksoft</groupId>
-            <artifactId>jcifs-krb5-jdk7</artifactId>
-            <version>1.3.18</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -574,9 +578,9 @@
         <httpclient.version>4.5.2</httpclient.version>
         <httpcore.version>4.4.4</httpcore.version>
         <poi.version>3.14</poi.version>
-        <selenium.version>2.52.0</selenium.version>
+        <selenium.version>2.53.0</selenium.version>
         <zk.version>6.5.4</zk.version>
-        <jackson.version>2.6.5</jackson.version>
+        <jackson.version>2.6.6</jackson.version>
         <tomcat.version>7.0.68</tomcat.version>
     </properties>
     <description>OpenSearchServer is a powerful, enterprise-class, search engine program. Using the web user interface,
